Glyph/Aesthetic Additions - Allow overflow scrolling - Add missing glyphs - Add glyph animations - Patch bugs where channels were not setting properly
Next, the state should reflect the bordering colors based on the banner.

--- a/docs/css/map.css
+++ b/docs/css/map.css
@@ -25,7 +25,7 @@ body {
     grid-template-columns: repeat(8, 1fr);
     grid-template-rows: repeat(8, 1fr);
     gap: 0;
-    overflow: hidden;
+    overflow: scroll;
     min-height: calc(100vh - 60px);
     max-height: calc(95% - 30px);
   }
